// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step should handle onClick 1`] = `
<DocumentFragment>
  .c3 {
  color: #007aff;
  font-weight: 700;
  font-size: 14px;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #007aff;
  color: #fff;
}

.c2:hover {
  background-color: #049;
  color: #fff;
}

.c2:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: pointer;
  padding: 0;
  font-weight: unset;
}

.c1:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
      data-testid="Step"
    >
      <div
        aria-selected="true"
        class="c3"
        color="primary"
        font-size="1"
      >
        Step
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Step should render a completed step correctly 1`] = `
<DocumentFragment>
  .c5 {
  color: #007aff;
  font-size: 14px;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 4px;
  width: 16px;
  color: #007aff;
}

.c3 {
  outline: none;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #007aff;
  color: #fff;
}

.c2:hover {
  background-color: #049;
  color: #fff;
}

.c2:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: default;
  padding: 0;
  font-weight: unset;
}

.c1:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
      data-testid="Step"
    >
      <svg
        aria-hidden="false"
        aria-label="Step Completed"
        class="c3 c4"
        color="primary"
        fill="currentcolor"
        focusable="false"
        height="16"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          d="M8.6 15.6l-4.2-4.2L3 12.8l5.6 5.6 12-12L19.2 5 8.6 15.6z"
        />
      </svg>
      <div
        aria-selected="false"
        class="c5"
        color="primary"
        font-size="1"
      >
        Step
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Step should render a step that is "active" and "completed" correctly 1`] = `
<DocumentFragment>
  .c5 {
  color: #007aff;
  font-weight: 700;
  font-size: 14px;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 4px;
  width: 16px;
  color: #007aff;
}

.c3 {
  outline: none;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #007aff;
  color: #fff;
}

.c2:hover {
  background-color: #049;
  color: #fff;
}

.c2:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: default;
  padding: 0;
  font-weight: unset;
}

.c1:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
      data-testid="Step"
    >
      <svg
        aria-hidden="false"
        aria-label="Step Completed"
        class="c3 c4"
        color="primary"
        fill="currentcolor"
        focusable="false"
        height="16"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          d="M8.6 15.6l-4.2-4.2L3 12.8l5.6 5.6 12-12L19.2 5 8.6 15.6z"
        />
      </svg>
      <div
        aria-selected="true"
        class="c5"
        color="primary"
        font-size="1"
      >
        Step
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Step should render an active step correctly 1`] = `
<DocumentFragment>
  .c3 {
  color: #007aff;
  font-weight: 700;
  font-size: 14px;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #007aff;
  color: #fff;
}

.c2:hover {
  background-color: #049;
  color: #fff;
}

.c2:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: default;
  padding: 0;
  font-weight: unset;
}

.c1:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
      data-testid="Step"
    >
      <div
        aria-selected="true"
        class="c3"
        color="primary"
        font-size="1"
      >
        Step
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Step should render correctly with no props without throwing 1`] = `
<DocumentFragment>
  .c3 {
  color: #4f6f8f;
  font-size: 14px;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #007aff;
  color: #fff;
}

.c2:hover {
  background-color: #049;
  color: #fff;
}

.c2:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: default;
  padding: 0;
  font-weight: unset;
}

.c1:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
    >
      <div
        aria-selected="false"
        class="c3"
        color="text.light"
        font-size="1"
      >
        Step
      </div>
    </button>
  </div>
</DocumentFragment>
`;
